@@ -21,5 +21,6 @@ type t =
   | Lapply of t * t
 
 val flatten: t -> string list
+val unflatten: string list -> t option
 val last: t -> string
 val parse: string -> t
