@@ -1,2 +1,2 @@
-let ast_impl_magic_number = "Caml1999M020"
-let ast_intf_magic_number = "Caml1999N018"
+let ast_impl_magic_number = "Caml1999M022"
+let ast_intf_magic_number = "Caml1999N022"
