@@ -1,6 +1,8 @@
 Camlp5 Version 7.03:
 --------------------
 
+* [20 Oct 17] Updated (again) for ocaml version 4.06.0.
+
 Camlp5 Version 7.02:
 --------------------
 
